<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="170sp"
        android:layout_gravity="center"
        app:cardBackgroundColor="#E3E3E3"
        app:cardCornerRadius="5sp">

        <TextView
            android:id="@+id/text_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="30sp"
            android:fontFamily="@font/averia_libre_light"
            android:text="@string/day"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_mont_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="60sp"
            android:fontFamily="@font/averia_serif_libre_light"
            android:text="@string/montAndYear"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="90sp"
            android:fontFamily="@font/averia_serif_libre_light"
            android:text="@string/time"
            android:textColor="#6A6A6A"
            android:textSize="20sp"
            android:textStyle="normal" />


        <TextView
            android:id="@+id/text_day2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="30sp"
            android:fontFamily="@font/averia_serif_libre_light"
            android:text="@string/day2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_mont_year2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="30sp"
            android:layout_marginTop="60sp"
            android:layout_marginEnd="30sp"
            android:fontFamily="@font/averia_serif_libre_light"
            android:text="@string/montAndYear2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_time2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="90sp"
            android:layout_marginEnd="30sp"
            android:fontFamily="@font/averia_serif_libre_light"
            android:text="@string/time2"
            android:textColor="#6A6A6A"
            android:textSize="20sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/button_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="6sp"
            android:backgroundTint="@color/white"
            android:text="@string/buttonText"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:cornerRadius="20dp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>