<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp">


    <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="170sp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="5sp">

        <TextView
            android:id="@+id/tv_satrtDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="30sp"
            android:fontFamily="sans-serif"
            android:text="@string/day"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_startMonthYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="60sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/montAndYear"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginTop="90sp"
            android:fontFamily="sans-serif"
            android:text="@string/time"
            android:textColor="@color/greylight"
            android:shadowColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />


        <TextView
            android:id="@+id/tv_endDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="30sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/day2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_endMonthYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="30sp"
            android:layout_marginTop="60sp"
            android:layout_marginEnd="30sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="@string/montAndYear2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="90sp"
            android:layout_marginEnd="30sp"
            android:fontFamily="sans-serif"
            android:text="@string/time2"
            android:textColor="@color/greylight"
            android:textSize="20sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/bn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30sp"
            android:layout_marginBottom="6sp"
            android:backgroundTint="@color/blue"
            android:text="Delete"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="20dp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>