<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_title_marginTop"
        android:layout_marginStart="@dimen/dialog_title_marginStart"
        android:layout_marginEnd="@dimen/dialog_title_textSize"
        android:gravity="start"
        android:text="@string/delete_reservation"
        android:textAlignment="gravity"
        android:textSize="@dimen/dialog_textSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_description_dialog_description"
        android:layout_marginStart="@dimen/dialog_description_marginStart"
        android:layout_marginEnd="@dimen/dialog_description_marginEnd"
        android:ems="15"
        android:gravity="start"
        android:text="@string/authorizationCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="@dimen/textInputLayout_widht"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textInputLayout_marginstart"
        android:layout_marginTop="@dimen/textInputLayout_marginTop1"
        android:layout_marginEnd="@dimen/textInputLayout_marginend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_authorizationCodeEntered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginStart="@dimen/textInputLayout_marginStart"
            android:layout_marginTop="@dimen/textInputLayout_marginTop1"
            android:layout_marginEnd="@dimen/textInputLayout_marginend"
            android:hint="@string/authorization_code" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_cancel_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_cancel_delete_marginTop"
        android:layout_marginEnd="@dimen/tv_cancel_delete_marginEnd"
        android:layout_marginBottom="@dimen/tv_cancel_delete_marginBottom"
        android:text="@string/cancel"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_ok_delete"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/tv_ok_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_ok_delete_marginTop"
        android:layout_marginEnd="@dimen/tv_ok_delete_marginEnd"
        android:layout_marginBottom="@dimen/tv_ok_delete_marginBottom"
        android:gravity="end"
        android:text="@string/ok"
        android:textSize="@dimen/tv_ok_delete_textSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <View
        android:id="@+id/view_Container"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_Container_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>